Naam van data veranderd

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
             <button class="edit_date">Recently edited</button>
         </div>
         <ul>
-            <% data.forEach(function(product) { %>
+            <% products.forEach(function(product) { %>
                 <li>
                     <div id="product">
                         <div id="frame">
