--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
         <!-- <script type="module" src="scripts/main.js"></script> -->
     </head>
     <body>
+        <!-- Instructions for the empty state. -->
+        <% let instructions = "Search for a product using the search bar above." %>
         <a id="title"><h1>Ethical<br>Food Checker</h1></a>
         <button id="explanation">Explanation</button>
         <section>
@@ -26,8 +28,8 @@
                 <a href="https://www.vox.com/2014/7/2/5865109/study-going-vegetarian-could-cut-your-food-carbon-footprint-in-half" target="_blank">Source</a></p>
         </section>
         <form method="get" action="/search">
-            <!-- https://stackoverflow.com/questions/4067469/selecting-all-text-in-html-text-input-when-clicked -->
-            <input type="search" name="q" placeholder="Name or barcode" aria-label="Name or barcode" onClick="this.setSelectionRange(0, this.value.length)" required>
+            <!-- Fill the search bar with the query. -->
+            <input type="search" name="q" value="<%= query %>" placeholder="Name or barcode" aria-label="Name or barcode" required>
             <button type="button" aria-label="Barcode" class="barcode"><img src="./images/barcode.png" alt="Barcode"></img></button>
             <button type="submit">Search</button>
         </form>
@@ -38,52 +40,52 @@
             <button class="edit_date">Recently edited</button>
         </div>
         <ul>
-            <% products.forEach(function(product) { %>
-                <% if (product.product_name != "") { %>
-                    <li>
-                        <div id="product">
-                            <div id="frame">
-                                <!-- Add the image if there is any. If not, use the placeholder. -->
-                                <img src=<%= product.image_small_url ? product.image_small_url : '../images/placeholder-image.png' %> alt=<%= product.product_name %>>
+            <% if (query && products.length != 0) { %>
+                <% products.forEach(function(product) { %>
+                    <% if (product.product_name != "") { %>
+                        <li>
+                            <div id="product">
+                                <div id="frame">
+                                    <!-- Add the image if there is any. If not, use the placeholder. -->
+                                    <img src=<%= product.image_small_url ? product.image_small_url : '../images/placeholder-image.png' %> alt=<%= product.product_name %>>
+                                </div>
+                                <span><span id="name"><%= product.product_name %></span>
+                                <!-- Empty list, to which the emojis will be added. -->
+                                <% let emojis = [] %>
+                                <!-- Check if there are any ingredients analysis tags. -->
+                                <% if (product.ingredients_analysis_tags) { %>
+                                    <!-- If the product is vegetarian, add the corresponding emoji. -->
+                                    <% if (product.ingredients_analysis_tags[2] == "en:vegetarian") { emojis.push(`<div id="tooltip">🐄<span>Vegetarian</span></div>`) } %>
+                                    <!-- If the product is vegan, add the corresponding emoji. -->
+                                    <% if (product.ingredients_analysis_tags[1] == "en:vegan") { emojis.push(`<div id="tooltip">🌱<span>Vegan</span></div>`) } %>
+                                    <!-- If the product is free from palm oil, add the corresponding emoji. -->
+                                    <% if (product.ingredients_analysis_tags[0] == "en:palm-oil-free") { emojis.push(`<div id="tooltip">🌴<span>Palm oil free</span></div>`) } %>
+                                <% } %>
+                                <!-- Merge the emojis into one string. -->
+                                <% emojis = emojis.join(" ") %>
+                                <p><%- emojis %>
+                                <!-- If the Eco-Score is known, add the corresponding image. -->
+                                <% if (product.ecoscore_grade != "unknown") { %>
+                                    <div id="tooltip"><img src="https://static.openfoodfacts.org/images/icons/ecoscore-<%= product.ecoscore_grade %>.svg" alt="Eco-Score: <%= product.ecoscore_grade.toUpperCase() %>" id="ecoscore"><span>Eco-Score</span></div></p><span>
+                                <% } %></p><span>
+                                <!-- Add the ingredients if there are any. -->
+                                <% if (product.ingredients_text) { %>
+                                    <p><details><summary>Ingredients</summary>
+                                    <p><%= product.ingredients_text %></p></details></p>
+                                <% } %>
                             </div>
-
-                            <span><span id="name"><%= product.product_name %></span>
-
-                            <!-- Empty list, to which the emojis will be added. -->
-                            <% let emojis = [] %>
-
-                            <!-- Check if there are any ingredients analysis tags. -->
-                            <% if (product.ingredients_analysis_tags) { %>
-                                <!-- If the product is vegetarian, add the corresponding emoji. -->
-                                <% if (product.ingredients_analysis_tags[2] == "en:vegetarian") { emojis.push(`<div id="tooltip">🐄<span>Vegetarian</span></div>`) } %>
-                                <!-- If the product is vegan, add the corresponding emoji. -->
-                                <% if (product.ingredients_analysis_tags[1] == "en:vegan") { emojis.push(`<div id="tooltip">🌱<span>Vegan</span></div>`) } %>
-                                <!-- If the product is free from palm oil, add the corresponding emoji. -->
-                                <% if (product.ingredients_analysis_tags[0] == "en:palm-oil-free") { emojis.push(`<div id="tooltip">🌴<span>Palm oil free</span></div>`) } %>
-                            <% } %>
-
-                            <!-- Merge the emojis into one string. -->
-                            <% emojis = emojis.join(" ") %>
-
-                            <p><%- emojis %>
-
-                            <!-- If the Eco-Score is known, add the corresponding image. -->
-                            <% if (product.ecoscore_grade != "unknown") { %>
-                                <div id="tooltip"><img src="https://static.openfoodfacts.org/images/icons/ecoscore-<%= product.ecoscore_grade %>.svg" alt="Eco-Score: <%= product.ecoscore_grade.toUpperCase() %>" id="ecoscore"><span>Eco-Score</span></div></p><span>
-                            <% } %></p><span>
-                                
-                            <!-- Add the ingredients if there are any. -->
-                            <% if (product.ingredients_text) { %>
-                                <p><details><summary>Ingredients</summary>
-                                <p><%= product.ingredients_text %></p></details></p>
-                            <% } %>
-                        </div>
-                    </li>
-                <% } %>
-             <% }) %>
+                        </li>
+                    <% } %>
+                <% }) %>
+                <!-- Clear the instructions upon succesful fetch. -->
+                <% instructions = "" %>
+            <% } else if (query != "" && products.length == 0) { %>
+                <!-- Change the instructions for the error state -->
+                <% instructions = "No products were found. Please try again." %>
+            <% } %>
         </ul>
         <button class="more">More</button>
-        <p class="instructions">Search for a product using the search bar above.</p>
+        <p class="instructions"><%= instructions %></p>
         <div class="loader"></div>
     </body>
 </html>
