Bestandsnamen verbeterd en geïmplementeerde modules verwijderd

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -19,7 +19,7 @@
 
 body {
     font-family: Lato Regular, system-ui;
-    background: url("../images/rm422-047.jpg") #eaf3e4 no-repeat fixed center;
+    background: url("../images/background.jpg") #eaf3e4 no-repeat fixed center;
     background-size: cover;
 }
 
