--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,7 +47,7 @@
                             <div id="product">
                                 <div id="frame">
                                     <!-- Add the image if there is any. If not, use the placeholder. -->
-                                    <img src=<%= product.image_small_url ? product.image_small_url : '../images/placeholder-image.png' %> alt=<%= product.product_name %>>
+                                    <img src=<%= product.image_small_url ? product.image_small_url : '../images/placeholder.png' %> alt=<%= product.product_name %>>
                                 </div>
                                 <span><span id="name"><%= product.product_name %></span>
                                 <!-- Empty list, to which the emojis will be added. -->
