Error state verbeterd

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <body>
         <!-- Instructions for the empty state. -->
         <% let instructions = "Search for a product using the search bar above." %>
-        <a id="title"><h1>Ethical<br>Food Checker</h1></a>
+        <a href="/" id="title"><h1>Ethical<br>Food Checker</h1></a>
         <button id="explanation">Explanation</button>
         <section>
             <button aria-label="Close">&#10007;</button>
