--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -30,6 +30,11 @@ h1 {
     cursor: pointer;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 #explanation {
     color: black;
     font-size: 1em;
