--- a/views/results.ejs
+++ b/views/results.ejs
@@ -61,7 +61,7 @@
                             <% emojis = emojis.join(" ") %>
                             <p><%- emojis %>
                             <!-- If the Eco-Score is known, add the corresponding image. -->
-                            <% if (product.ecoscore_grade != "unknown") { %>
+                            <% if (product.ecoscore_grade && product.ecoscore_grade != "unknown") { %>
                                 <div id="tooltip"><img src="https://static.openfoodfacts.org/images/icons/ecoscore-<%= product.ecoscore_grade %>.svg" alt="Eco-Score: <%= product.ecoscore_grade.toUpperCase() %>" id="ecoscore"><span>Eco-Score</span></div></p><span>
                             <% } %></p><span>
                             <!-- Add the ingredients if there are any. -->
