--- a/views/error.ejs
+++ b/views/error.ejs
@@ -31,5 +31,6 @@
             <button type="submit">Search</button>
         </form>
         <p class="instructions">No products were found with the <%= type %> "<%= query %>". Please try again.</p>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
