--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,5 +30,6 @@
             <button type="submit">Search</button>
         </form>
         <p class="instructions">Search for a product using the search bar above.</p>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
