--- a/views/results.ejs
+++ b/views/results.ejs
@@ -76,5 +76,6 @@
         </ul>
         <button class="more">More</button>
         <div class="loader"></div>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
