Cache met service worker toegevoegd

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ethical Food Checker</title>
         <link rel="stylesheet" href="styles/style.css">
+        <link rel="manifest" href="/manifest.json">
     </head>
     <body>
         <a href="/"><h1>Ethical<br>Food Checker</h1></a>
