--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,6 +8,7 @@
     <body>
         <a href="/"><h1>Ethical<br>Food Checker</h1></a>
         <button id="explanation">Explanation</button>
+        <link rel="manifest" href="/manifest.json">
         <section>
             <button aria-label="Close">&#10007;</button>
             <h2>Explanation</h2>
