--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Playlist Script";
-    src: url("../fonts/Playlist Script.otf");
+    src: url("../fonts/Playlist-Script.otf");
 }
 
 @font-face {
