--- a/views/offline.ejs
+++ b/views/offline.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ethical Food Checker</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="/styles/style.css">
         <link rel="manifest" href="/manifest.json">
     </head>
     <body>
@@ -31,7 +31,7 @@
             <button type="button" aria-label="Barcode" class="barcode"><img src="./images/barcode.png" alt="Barcode"></img></button>
             <button type="submit">Search</button>
         </form>
-        <p class="instructions">No internet. Please fix your connection and try again..</p>
+        <p class="instructions">No internet. Please fix your connection and try again.</p>
         <script src="scripts/script.js"></script>
     </body>
 </html>
