--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,7 @@
         <form method="get" action="/search">
             <input type="text" name="q" placeholder="Name or barcode" aria-label="Name or barcode" onClick="this.setSelectionRange(0, this.value.length)" required>
             <button type="button" aria-label="Barcode" class="barcode"><img src="./images/barcode.png" alt="Barcode"></img></button>
+            <input type="hidden" name="p" value="1">
             <button type="submit">Search</button>
         </form>
         <p class="instructions">Search for a product using the search bar above.</p>
