--- a/views/results.ejs
+++ b/views/results.ejs
@@ -78,6 +78,12 @@
         <!-- If there are more pages, show the "More" button. -->
         <% if (more) { %>
             <button class="more">More</button>
+            <!-- Input field for the pagination. -->
+            <form method="get" action="/search">
+                <input type="hidden" name="q" value="<%= query %>">
+                <input type="number" name="p" value="<%= page %>" required>
+                <button type="submit">Search</button>
+            </form>
         <% } %>
         <div class="loader"></div>
         <script src="scripts/script.js"></script>
