--- a/views/error.ejs
+++ b/views/error.ejs
@@ -29,6 +29,7 @@
             <!-- Fill the search bar with the query. -->
             <input type="text" name="q" value="<%= query %>" placeholder="Name or barcode" aria-label="Name or barcode" onClick="this.setSelectionRange(0, this.value.length)" required>
             <button type="button" aria-label="Barcode" class="barcode"><img src="./images/barcode.png" alt="Barcode"></img></button>
+            <input type="hidden" name="p" value="1">
             <button type="submit">Search</button>
         </form>
         <p class="instructions">No products were found with the <%= type %> "<%= query %>". Please try again.</p>
