--- a/views/offline.ejs
+++ b/views/offline.ejs
@@ -26,12 +26,12 @@
                 <a href="https://www.vox.com/2014/7/2/5865109/study-going-vegetarian-could-cut-your-food-carbon-footprint-in-half" target="_blank">Source</a></p>
         </section>
         <form method="get" action="/search">
-            <!-- Fill the search bar with the query. -->
             <input type="text" name="q" placeholder="Name or barcode" aria-label="Name or barcode" onClick="this.setSelectionRange(0, this.value.length)" required>
             <button type="button" aria-label="Barcode" class="barcode"><img src="./images/barcode.png" alt="Barcode"></img></button>
+            <input type="hidden" name="p" value="1">
             <button type="submit">Search</button>
         </form>
-        <p class="instructions">No internet. Please fix your connection and try again.</p>
+        <p class="instructions">No internet. Please fix your connection and&nbsp<a onClick="window.location.reload()">try again</a>.</p>
         <script src="scripts/script.js"></script>
     </body>
 </html>
