--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -317,7 +317,7 @@ form:nth-of-type(2) input {
     width: 75px;
     border: none;
     border-radius: 5px;
-    padding: 12px 20px;
+    padding: 12px;
 }
 
 /* Hide arrows from number input in Chrome, Safari, Edge and Opera. */
