Placeholder toegevoegd aan paginering

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -50,7 +50,7 @@
                 <input type="hidden" name="q" value="<%= query %>">
                 <div>
                     <label for="page">Page</label>
-                    <input type="number" id="page" name="p" value="<%= page %>" min="1" max="<%= pages %>" onClick="this.select()" required>
+                    <input type="number" id="page" name="p" value="<%= page %>" placeholder="<%= page %>" min="1" max="<%= pages %>" onClick="this.select()" required>
                 </div>
                 <button type="submit">Search</button>
             </form>
