--- a/views/offline.ejs
+++ b/views/offline.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <%- include("partials/head") %>
     <body>
         <a href="/"><h1>Ethical<br>Food Checker</h1></a>
