--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Ethical Food Checker can be used to find out whether a product is vegetarian or vegan, if it contains palm oil, and what its Eco-Score is.">
     <title>Ethical Food Checker</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="manifest" href="manifest.json">
